# AgoraTable

./: CMakeLists.txt  GNUmakefile  README.md  exportVariables.sh  exportVariables.sh~
data/: bgnodes.xml  settings.xml  settings.xml~  slideHorizontal.frag  slideVertical.frag
data/bg_Icons/: Thumbs.db
data/gesturedb/: index.php  request.php
data/gesturedb/includes/: conf.php  lib.php
data/gesturedb/media/: log.txt
data/gesturedb/media/userpictures/: 1392903506_
release/: CMakeCache.txt  Makefile  cmake_install.cmake  testAppOF.cbp  testAppOF.layout
release/Link to bin/data/: bak_database.xml  bak_seasson.xml  settings.xml  ttyACM0.txt~
release/Link to bin/data/xmls/: ShaderSettings.xml
release/src/: Makefile  cmake_install.cmake
release/src/DataManager/: Makefile  cmake_install.cmake
release/src/GUI/: Makefile  cmake_install.cmake
release/src/Hello/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  testApp.cpp  testApp.h
src/DataManager/: BGnode.cpp  BGnode.h  CMakeLists.txt  CMakeLists.txt~  DataManager.cpp  DataManager.h  Gesture.cpp  Gesture.h  MediaContent.cpp  MediaContent.h  Node.cpp  Node.h
src/GUI/: CMakeLists.txt  CMakeLists.txt~  Htmlstring.cpp  Htmlstring.h  Infogui.cpp  Infogui.h  TranspButt.cpp  TranspButt.h  TuioManager.h  Wall.cpp  Wall.h
src/Hello/: CMakeLists.txt  Hello.cpp  Hello.h
